--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -2,4 +2,9 @@
 <resources>
     <string name="app_name">Новый Проект</string>
     <string name="nmedia">НМедиа!</string>
+    <string name="content">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
+    <string name="author">Нетология. Университет интернет-профессий будущего</string>
+    <string name="published">21 мая 18:36</string>
+    <string name="avatar">Аватар</string>
+    <string name="more">Больше информации</string>
 </resources>
